<resources>
    <string name="app_name">Comedor Nutri Red</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kary</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Inicio de Sesion</string>
    <string name="menu_calificaciones">Calificaciones</string>
    <string name="menu_escanearqr">Escanear QR</string>
    <string name="menu_registrarnuevousuario">Registrar Nuevo Usuario</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_menu">Menu del dia</string>
    <string name="menu_reportes">Reportar Problema</string>
    <string name="menu_reportes_ayuda">¿En qué consisten los informes?</string>
    <string name="menu_usuario_registrado">Usuario Registrado</string>
    <string name="menu_cerrarSesion">Cerrar Sesion</string>
</resources>