<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calificaciones"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_calificaciones" />
        <item
            android:id="@+id/nav_escanearqr"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_escanearqr" />
        <item
            android:id="@+id/nav_registrarnuevousuario"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_registrarnuevousuario" />
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_inventario" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reportes" />
    </group>
</menu>